# Stellar-Digital-Tip-Jar

./: README.md
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: README.md  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: TipJar.tsx  WalletConnect.tsx
frontend/lib/: soroban.ts
