[package]
name = "soroban-tip-jar-contract"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <email@example.com>"]
description = "A digital tip jar smart contract running on Stellar/Soroban."
license = "MIT"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "20.3.1"

[dev-dependencies]
soroban-sdk = { version = "20.3.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
